# ruiqi-projects

./: joust.py  status
Battleship_C++/BattleshipLocal/: CMakeLists.txt  Player.cpp  Player.hpp  Point.cpp  Point.hpp  Ship.cpp  Ship.hpp  ShipBoard.cpp  ShipBoard.hpp  ShipCell.cpp  ShipCell.hpp  TargetBoard.cpp  TargetBoard.hpp  TargetCell.cpp  TargetCell.hpp  main.cpp
Connect4_C++/Connect4Local/: Board.cpp  Board.hpp  CMakeLists.txt  main.cpp
GameOfPureStrategy_C/GOPSlocal/: CMakeLists.txt  Makefile
GameOfPureStrategy_C/GOPSlocal/src/: card.c  card.h  deck.c  deck.h  main.c  player.c  player.h  prize.c  prize.h
PhantomTicTacToe_Rust/PhantomTTTLocal/: Cargo.toml
PhantomTicTacToe_Rust/PhantomTTTLocal/src/: game.rs  main.rs  player.rs
PhantomTicTacToe_Rust/PhantomTTTOnline/: Cargo.toml
PhantomTicTacToe_Rust/PhantomTTTOnline/client/: Cargo.toml
PhantomTicTacToe_Rust/PhantomTTTOnline/host/: Cargo.toml
SchottenTotten2_Java/local/localconsole/: .gitignore  README.md
SchottenTotten2_ismcts/: Cargo.toml  build.rs
SchottenTotten2_ismcts/src/: game_state.rs  main.rs  node.rs  parallel_multi_observer_ismcts.rs  schotten_totten_2_state.rs
SchottenTotten2_proto/protos/: card.proto  client_move.proto  game_service.proto  game_state.proto  participant.proto  wall.proto
TheFoxInTheForest_Rust/: Cargo.toml
TheFoxInTheForest_Rust/client/: Cargo.toml
TheFoxInTheForest_Rust/common/: Cargo.toml
TheFoxInTheForest_Rust/host/: Cargo.toml
TiaoQi_Rust/TiaoQiLocal/: Cargo.toml
TiaoQi_Rust/TiaoQiOnline/: Cargo.toml
TicTacToe_Rust/TicTacToeLocal/: Cargo.toml
(+269 files in other folders)
